--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,5 +1,7 @@
 ---
-{"dg-home":"true","dg-publish":true,"banner":"![countryside_by_forheksed_dev3yif-fullview.jpg](/img/user/copilot-custom-prompts/countryside_by_forheksed_dev3yif-fullview.jpg)","banner-height":540,"banner-x":48,"banner-y":71,"content-start":291,"banner-fade":-65,"banner-radius":13,"banner-display":"100%","permalink":"//","tags":["gardenEntry"],"dgPassFrontmatter":true}
+{"dg-home":"true","dg-publish":true,"permalink":"//","tags":["gardenEntry"],"dgPassFrontmatter":true}
 ---
 
-## Test
+![countryside.jpg](/img/user/img/countryside.jpg)
+
+
