--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,8 +1,10 @@
 ---
-{"dg-home":"true","dg-publish":true,"permalink":"//","tags":["gardenEntry"],"dgPassFrontmatter":true}
+{"aliases":null,"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期六, 七月 12日 2025, 10:41:20 晚上","banner":"![countryside.jpg](/img/user/img/countryside.jpg)","permalink":"//","dgPassFrontmatter":true}
 ---
 
+
 ![countryside.jpg](/img/user/img/countryside.jpg)
+
 
 
 
