Published multiple files

--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,11 +1,11 @@
 ---
-{"aliases":null,"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期六, 七月 12日 2025, 10:41:20 晚上","banner":"![countryside.jpg](/img/user/img/countryside.jpg)","permalink":"//","dgPassFrontmatter":true}
+{"aliases":null,"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期六, 七月 12日 2025, 10:41:20 晚上","banner":"img/countryside.jpg","permalink":"//","dgPassFrontmatter":true}
 ---
 
 
 ![countryside.jpg](/img/user/img/countryside.jpg)
 # Welcome
 
-
+My name is Zhou You
 
 
