--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,10 +1,14 @@
 ---
-{"aliases":[],"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期六, 七月 12日 2025, 11:55:54 晚上","permalink":"//","dgPassFrontmatter":true}
+{"aliases":null,"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 12:17:13 凌晨","cssclasses":["close_show_title","full_width_page","list-cards"],"permalink":"//","dgPassFrontmatter":true}
 ---
 
 
 ![countryside.jpg](/img/user/img/countryside.jpg)
 
 # Welcome
+
+- ![[countryside.jpg#L|200x135]]
+- s
+- s
 
 <p><span>共创建 14 篇笔记、0 个标签</span></p>
