--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,5 +1,5 @@
 ---
-{"aliases":null,"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 12:05:44 中午","cssclasses":["close_show_title","full_width_page","list-cards"],"permalink":"//","contentClasses":"close_show_title full_width_page list-cards","dgPassFrontmatter":true}
+{"aliases":null,"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 1:20:01 下午","cssclasses":["close_show_title","full_width_page","list-cards"],"permalink":"//","contentClasses":"close_show_title full_width_page list-cards","dgPassFrontmatter":true}
 ---
 
 
@@ -7,14 +7,8 @@
 
 # Welcome
 
-- 标题 1
-	- s
-	- s
-- 标题 2
-	- s
-	- s
-- 标题 3
-	- s
-	- s
 
-<p><span>共创建 14 篇笔记、0 个标签</span></p>
+
+[[工具箱\|工具箱]]
+
+<p><span>共创建 16 篇笔记、0 个标签</span></p>
