Published multiple files

--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,13 +1,11 @@
 ---
-{"aliases":null,"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 1:20:01 下午","cssclasses":["close_show_title","full_width_page","list-cards"],"permalink":"//","contentClasses":"close_show_title full_width_page list-cards","dgPassFrontmatter":true}
+{"aliases":[],"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 2:10:27 下午","permalink":"//","dgPassFrontmatter":true}
 ---
 
 
 ![countryside.jpg](/img/user/img/countryside.jpg)
 
 # Welcome
-
-
 
 [[工具箱\|工具箱]]
 
