--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,5 +1,5 @@
 ---
-{"aliases":[],"tags":["gardenEntry"],"dg-home":"true","dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 2:10:27 下午","permalink":"//","dgPassFrontmatter":true}
+{"aliases":null,"tags":["gardenEntry"],"dg-home":true,"dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 2:10:27 下午","permalink":"//","dgPassFrontmatter":true}
 ---
 
 
@@ -9,4 +9,4 @@
 
 
 
-<p><span>共创建 14 篇笔记、0 个标签</span></p>
+<p><span>共创建 15 篇笔记、0 个标签</span></p>
