--- a/src/site/notes/首页.md
+++ b/src/site/notes/首页.md
@@ -1,12 +1,10 @@
 ---
-{"aliases":null,"tags":["gardenEntry"],"dg-home":true,"dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 2:10:27 下午","permalink":"//","dgPassFrontmatter":true}
+{"aliases":[],"tags":["gardenEntry"],"dg-home":true,"dg-publish":true,"date created":"星期五, 七月 11日 2025, 5:16:19 下午","date modified":"星期日, 七月 13日 2025, 2:42:01 下午","permalink":"//","dgPassFrontmatter":true}
 ---
 
 
 ![countryside.jpg](/img/user/img/countryside.jpg)
 
 # Welcome
-
-
 
 <p><span>共创建 15 篇笔记、0 个标签</span></p>
